src/pages/LendPage/components/ExpandableCardContent/ExpandableCardContent.module.less
.container {
  cursor: default;
  display: flex;
  overflow: hidden;
  height: 454px;
  width: 100%;

  @media (max-width: 640px) {
    height: 416px;
  }
}

.tabsContent {
  border: var(--border-less-primary);
  border-right: 0;
  border-bottom: 0;
  width: 100%;

  @media (max-width: 1240px) {
    display: none;
  }
}

.modal :global {
  .ant-modal-body {
    height: 440px;
  }

  .ant-modal-content {
    padding: 0;
  }
}

.content {
  padding: 12px 24px 24px;
  cursor: default;
  width: 100%;

  @media (max-width: 640px) {
    padding: 16px;
  }
}

.offerHeaderContent {
  display: flex;
  align-items: center;
  gap: 16px;

  @media (max-width: 640px) {
    margin-bottom: 0;
  }
}
.offerHeaderTitle {
  font: var(--title-sm);
  text-transform: uppercase;
  line-height: 38px;

  @media (max-width: 640px) {
    font-size: 12px;
    line-height: 32px;
  }
}

.offersButton {
  margin-left: auto;

  @media (min-width: 1241px) {
    display: none !important;
  }
}

.editButton,
.offersButton {
  width: 104px;

  @media (max-width: 640px) {
    width: 80px;
  }
}

